--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,13 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.gt3 {
+  background-color: #e41a17;
 }
